# steam-vdf

./: .flake8  .pre-commit-config.yaml  Makefile  Pipfile  README.md  build_docs.py  pyproject.toml  requirements.txt  setup.py
.GitHub/workflows/: python-app.yml
.github/: workflows
.github/workflows/: python-app.yml
docs/: conf.py  index.rst
docs/source/: modules.rst  steam_vdf.rst
src/steam_vdf/: storage.py  users.py  utils.py
steam_vdf/: cli.py  storage.py  users.py  utils.py
tests/: conftest.py  test_users.py
