[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "black>=23.0.0",
    "autopep8",
    "isort"
]
build-backend = "setuptools.build_meta"

[project]
name = "steam-vdf"
version = "0.1.8"
description = "Do fun things with Steam VDF data files"
readme = "README.md"
authors = [
    {name = "Michael DeGuzis", email = "mdeguzis@gmail.com"},
]
requires-python = ">=3.6"
dependencies = [
    "vdf",
    "psutil",
    "humanize",
]

[project.optional-dependencies]
docs = [
    "sphinx==7.1.2",
]

[project.scripts]
steam-vdf = "steam_vdf.cli:main"

[project.urls]
Homepage = "https://github.com/mdeguzis/steam-vdf"
Repository = "https://github.com/mdeguzis/steam-vdf"
Issues = "https://github.com/mdeguzis/steam-vdf/issues"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 90
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "env",
    "venv"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.sphinx]
project = "steam-vdf"
version = "0.1"
release = "0.1"
source-dir = "docs/source"
build-dir = "docs/build"
all-files = true
