[tool.poetry]
name = "steam-vdf"
version = "0.1.8"
description = "Steam VDF file parser"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "steam_vdf", from = "src"}]

[tool.poetry.dependencies]
humanize = "^4.9.0"
python = "^3.11"
vdf = "^3.4"
psutil = "*" 

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
